SF Primes/src/objects/ALL_Query_Conditions__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Describe Call?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Identifier__c</fullName>
        <label>Identifier</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_Name__c</fullName>
        <label>Method Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObject__c</fullName>
        <label>sObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ALL Query Conditions</label>
</CustomObject>